[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "meant4_qa_eng_test"
version = "1.0.0"
description = "Automated tests for meant4"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["meant4", "QA", "entry-tests"]
license = { text = "MIT" }
classifiers = [
    "Framework :: pytest",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "colorama==0.4.6",
    "gherkin-official==29.0.0",
    "iniconfig==2.0.0",
    "Mako==1.3.9",
    "MarkupSafe==3.0.2",
    "packaging==24.2",
    "parse==1.20.2",
    "parse_type==0.6.4",
    "pluggy==1.5.0",
    "pytest==8.3.4",
    "pytest-bdd==8.1.0",
    "six==1.17.0",
    "typing_extensions==4.12.2",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["./test*"]
namespaces = false
