[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "meant4_qa_eng_test"
version = "1.0.0"
description = "Automated tests for meant4"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["meant4", "QA", "entry-tests"]
license = { text = "MIT" }
classifiers = [
    "Framework :: pytest",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "attrs==25.1.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "colorama==0.4.6",
    "gherkin-official==29.0.0",
    "h11==0.14.0",
    "iniconfig==2.0.0",
    "idna==3.10",
    "Mako==1.3.9",
    "MarkupSafe==3.0.2",
    "outcome==1.3.0.post0",
    "packaging==24.2",
    "parse==1.20.2",
    "parse_type==0.6.4",
    "pluggy==1.5.0",
    "pycparser==2.22",
    "PySocks==1.7.1",
    "pytest==8.3.4",
    "pytest-bdd==8.1.0",
    "pytest-splinter==3.3.2",
    "selenium==4.28.1",
    "setuptools==75.8.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "splinter==0.21.0",
    "trio==0.29.0",
    "trio-websocket==0.12.0",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
    "websocket-client==1.8.0",
    "wsproto==1.2.0",
]

[tool.pytest.ini_options]
bdd_features_base_dir = "features"
minversion = "8.0"
addopts = "--splinter-webdriver chrome"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["./test*"]
namespaces = false
